--- a/AIoT.ipynb
+++ b/AIoT.ipynb
@@ -11,7 +11,7 @@
         "K6S72RSaW6qP"
       ],
       "mount_file_id": "16LYzAFG_g2ZNghjdxCvSKSqv2l53A8K7",
-      "authorship_tag": "ABX9TyN8Yr9XjhHaozGrpdY80vid",
+      "authorship_tag": "ABX9TyNBy19nax/8cOoSEdChM+c5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
       "source": [
         "!cd /content/gdrive/MyDrive/GCR3"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "source": [
         "!wget https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +271,7 @@
         "import time\n",
         "from random import random\n",
         "from urllib.request import urlopen\n",
-        "myAPI = 'SMAO1HDHRUCP6TZY' # 'put here your API Key'\n",
+        "myAPI = '' # 'put here your API Key'\n",
         "# URL where we will send the data, Don't change it\n",
         "baseURL = 'https://api.thingspeak.com/update?api_key=%s' % myAPI\n",
         "while True:\n",
@@ -282,7 +282,7 @@
         "# Closing the connection\n",
         "conn.close()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -375,7 +375,7 @@
         "client.loop_forever()\n",
         "# Non blocking : client.loop_start()  N.B. need a while True: statement\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +466,7 @@
         "    f.write(binary)\n",
         "  return filename"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,7 +528,7 @@
         "</video>\n",
         "\"\"\" % data_url)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -569,7 +569,7 @@
       "source": [
         "!pip install ffmpeg-python"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "\n",
         "  return audio, sr"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -721,7 +721,7 @@
       "source": [
         "audio, sr = get_audio()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -830,7 +830,7 @@
         "plt.plot(audio)\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -887,7 +887,7 @@
       "source": [
         "!pip install gTTS"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,7 +925,7 @@
         "tts.save('file1.wav')\n",
         "Audio('file1.wav',autoplay=True)  "
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +978,7 @@
         "  \n",
         "from IPython.display import YouTubeVideo"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
         "YOUTUBE_ID = \"tn6BiwLLyMU\"\n",
         "YouTubeVideo(YOUTUBE_ID)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1109,7 +1109,7 @@
         "!youtube-dl --extract-audio --audio-format wav --output \"test.%(ext)s\" https://www.youtube.com/watch\\?v\\={YOUTUBE_ID}\n",
         "!deepspeech --model deepspeech-0.6.1-models/output_graph.pbmm --lm deepspeech-0.6.1-models/lm.binary --trie deepspeech-0.6.1-models/trie --audio test.wav"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1163,7 @@
         "!pip install pytesseract\n",
         "!sudo apt-get install tesseract-ocr-eng"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1208,7 +1208,7 @@
         "extractedInformation = pytesseract.image_to_string(Img)\n",
         "print(extractedInformation)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1258,7 +1258,7 @@
         "    https://raw.githubusercontent.com/computationalcore/introduction-to-opencv/master/assets/haarcascade_eye.xml \\\n",
         "    -O haarcascade_eye.xml"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1330,7 @@
         "grey = cv2.cvtColor(base_image, cv2.COLOR_BGR2GRAY)\n",
         "plt.imshow(cv2.cvtColor(base_image, cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1375,7 +1375,7 @@
         "     cv2.rectangle(test_image,(x,y),(x+w,y+h),(255,0,0),2)\n",
         "plt.imshow(cv2.cvtColor(test_image, cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1424,7 +1424,7 @@
         "      cv2.rectangle(test_image, (x_s,y_s),(x_s+w_s,y_s+h_s),(255,255,255),2)\n",
         "plt.imshow(cv2.cvtColor(test_image, cv2.COLOR_BGR2RGB))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
